--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
   "dependencies": {
     "axios": "^1.6.7",
     "bull": "^4.12.2",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "node-telegram-bot-api": "^0.64.0"
+    "redis": "^4.6.13"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
