--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,3 @@
 PORT = 8080
 
-REDIS_HOST=ABCDEFG.com
-REDIS_PORT=6379
-REDIS_USER=USER
-REDIS_PASSWORD=PASSWORD
+REDIS_URL=redis://192.168.3.116:6379
