--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.9'
 services:
   redis:
     image: redis:latest
+    container_name: redis
     ports:
       - "6379:6379"
 
@@ -9,10 +10,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: my-node-app-container
     ports:
       - "3000:3000"
     environment:
-      - REDIS_HOST=redis
+      - REDIS_URL=redis://redis:6379
     depends_on:
       - redis
-  
