--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 PORT = 8080
 
+#REDIS
 REDIS_URL=redis://localhost:6379
-REDIS_LOCAL=redis://localhost:6379
+
+#TELEGRAM DEFAULT
+TELEGRAM_DEFAULT_CHATID=@timesync_360
+TELEGRAM_DEFAULT_TOKEN=7048510664:AAFgU98WXmRBdaoG27B5ZUci02og3yDQN2w
